Page header is sits right on top of the left sidebar and no longer spans the width of the page. The "logo" is now the word "SEISMIC", all uppercase with wide letter-spacing.
The info sidebar is an <aside>.

--- a/src/sass/master.scss
+++ b/src/sass/master.scss
@@ -7,10 +7,16 @@ header {
   color: white;
   margin: 0;
   height: 40px;
-}
+  width: 250px;
+  padding: 10px;
 
-header h1 {
-  display: inline;
+  h1 {
+    padding: 0;
+    margin: 0;
+    font-size: 1rem;
+    text-transform: uppercase;
+    letter-spacing: 0.3rem;
+  }
 }
 
 main {
